# opensaft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json
.github/workflows/: cmake-multi-platform.yml  deploy-documentation.yml
cmake/modules/: FindBackward.cmake  FindCVolume.cmake  FindCatch2.cmake  FindGLFW.cmake  FindImGUI.cmake  FindImGUIFileDialog.cmake  FindImPlot.cmake
docs/: contributing.md  data_format.md  hardware.md  index.md  literature.md  physics.md  software.md
docs/.vitepress/: config.mts
examples/: cuda_progress.cpp
lib/: CMakeLists.txt
matlab/: fd_test.m
src/: CMakeLists.txt  ColorMapper.cpp  ColorMapper.h  ImGuiFileDialog.cpp  ImGuiFileDialog.h  Interface.cpp  Interface.h  MathUtil.h  ReconSettings.cpp  ReconSettings.h  Saft.cpp  Saft.cu  Saft.cuh  Saft.h  Transducer.cpp  Transducer.h  VectorN.h  colorMapper.cpp  colorMapper.h  color_mapper.cu  color_mapper.cuh  griddedData.h  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_plot.cpp  imgui_plot.h  interface.cpp  interface.h  main.cpp  reconSettings.cpp  reconSettings.h  saft.cpp  saft.cu  saft.cuh  saft.h  transducer.cpp  transducer.h
src/Gui/: CMakeLists.txt  Interface.cpp  Interface.h
src/Memory/: CMakeLists.txt  UltrasoundSignals.cpp  UltrasoundSignals.h  Volume.cpp  Volume.h
src/Slicer/: CMakeLists.txt  Slicer.cpp  Slicer.h
src/Util/: CMakeLists.txt  Logger.cpp  Logger.h  Timer.cpp  Timer.h
tests/: CMakeLists.txt  TestMain.cpp  TestSaft.cpp  TestTimer.cpp  TestUltrasoundSignals.cpp  TestVectorN.cpp  TestVolume.cpp
